# lubeshop

./: .gitignore  Cargo.toml  README.md  THIRD-PARTY-LICENSES.html  THIRD-PARTY-NOTICES.md  about.toml  install.sh
.github/workflows/: ci.yml  macos.yml  release.yml  windows-tools.yml  windows.yml
3D Files/: BOM.txt  README.md  greaseweasleShelf.scad  weazleEnclosure.scad
crates/gwm-core/: Cargo.toml
crates/gwm-core/examples/: cpm_demo.rs  fs_demo.rs  probe.rs  read_demo.rs  scan_demo.rs  write_demo.rs
crates/gwm-core/src/: archive.rs  catalog.rs  cbm_basic.rs  cbm_disk.rs  convert.rs  device.rs  error.rs  formats.rs  imagefs.rs  lib.rs  library.rs  models.rs  paths.rs  proc.rs  read.rs  settings.rs  textedit.rs  tools.rs  trs_disk.rs  usb.rs  util.rs  write.rs
crates/gwm-tui/: Cargo.toml
crates/gwm-tui/src/: app.rs  count_job.rs  download_job.rs  file_browser.rs  gotek_job.rs  install_job.rs  main.rs  net_job.rs  read_job.rs  rpm_job.rs  text_input.rs  theme.rs  ti99_job.rs  ui.rs  version_job.rs  write_job.rs
packaging/: PKGBUILD  RELEASING.md  build-cpmtools-win64.sh  release.sh  test-installers.sh  windows-tool-spike.ps1
