[workspace]
resolver = "2"
members = ["crates/gwm-core", "crates/gwm-tui"]

[workspace.package]
version = "1.0.1"
edition = "2021"
license = "GPL-3.0-or-later"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"

# Release profile: this is a TUI, not a hot loop, so favour a small, fast binary.
[profile.release]
opt-level = "z"
lto = true
strip = true
